--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,9 @@ jobs:
           curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | sh
           arduino-cli version
 
+      - name: Add Arduino CLI to PATH
+        run: echo "${{ github.workspace }}/ESP32-SwiftSpam/bin" >> $GITHUB_PATH
+
       - name: Update Arduino index and install ESP32 core
         run: |
           arduino-cli core update-index
