--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,12 +15,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Arduino CLI
-        run: |
-          curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | sh
-          arduino-cli version
-
-      - name: Add Arduino CLI to PATH
-        run: echo "${{ github.workspace }}/ESP32-SwiftSpam/bin" >> $GITHUB_PATH
+        uses: arduino/setup-arduino-cli@v2
 
       - name: Update Arduino index and install ESP32 core
         run: |
