--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,10 +31,15 @@ jobs:
         run: |
           mkdir -p build
           arduino-cli compile --fqbn esp32:esp32:esp32 --build-path build ESP32-SwiftSpam.ino
+          cp build/ESP32-SwiftSpam.ino.merged.bin ESP32-SwiftSpam.bin
 
+      - name: Get short commit hash
+        id: vars
+        run: echo "short_sha=${GITHUB_SHA::7}" >> $GITHUB_ENV
+      
       - name: Upload merged binary artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ESP32-SwiftSpam.bin
-          path: build/ESP32-SwiftSpam.ino.merged.bin
+          name: ESP32-SwiftSpam-${{ env.short_sha }}
+          path: ESP32-SwiftSpam.bin
 
