--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,6 @@ jobs:
       - name: Upload merged binary artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ESP32-SwiftSpam-${{ env.short_sha }}
+          name: ESP32-SwiftSpam_${{ env.short_sha }}
           path: ESP32-SwiftSpam.bin
 
